feat: Add sentiment analysis fix: Theming dark and light mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="title_default">Title</string>
     <string name="content_default">Content</string>
     <string name="datetime_default">Datetime</string>
+    <string name="default_emotion">☺️</string>
+    <string name="loading_text_default">Loading...</string>
 </resources>
